# RFWScopeDAQ

./: .gitignore  README.md  VERSION  cfg.json  cfg.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: release.yml  test.yml
docker/softioc/db/: softioc.db
docker/softioc/scripts/: ioc_command.sh  ioc_controller.sh  st.cmd  start_ioc.sh
src/rfwscopedaq/: __init__.py  app_config.py  cavity.py  collect_data.py  config.py  email_sender.py  main.py
test/unit/: __init__.py
test/unit/test_rfwscopedaq/: test_collect_data.py  test_main.py  write_files_test.tsv
