[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rfwscopedaq"
authors = [
    {name = "Adam Carpenter", email = "adamc@jlab.org"},
]
description = "Application for collecting RF waveform data from C100 FCC Scope Mode"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["rf", "RF", "waveform", "Waveform"]
license = {text = "JLab"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    'mysql-connector-python >=8.4, < 9.0',
    'pyepics >= 3.5, < 4.0',
    'pandas >= 1.5, < 3.0',
    'numpy >= 1.24, < 3.0',
    'PyYAML >= 6.0, < 7.0',
    'rfscopedb@git+https://github.com/JeffersonLab/rfscopedb#egg=v1.0.0'
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    'pytest >= 8.3, < 9.0',
    'pytest-cov >= 6.0.0, < 7.0',
    'build >= 1.2, < 2.0',
    'pylint >=3.3, < 4.0'
]

[project.scripts]
RFWScopeDAQ = "rfwscopedaq.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test/unit",]
norecursedirs = [".git", "node_modules", "venv"]
addopts = "--cov=rfwscopedaq --cov-fail-under=80"

[tool.pylint]
max-line-length = 120
max-attributes = 12
max-args = 8

# ... other project metadata fields as listed in:
#     https://packaging.python.org/en/latest/guides/writing-pyproject-toml/